manifests/frontend-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-depl
  template:
    metadata:
      labels:
        app: frontend-depl
    spec:
      containers:
        - name: frontend-depl
          image: jiaqiwang118/url-frontend
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-depl
spec:
  selector:
    app: frontend-depl
  ports:
    - name: frontend-depl
      protocol: TCP
      port: 3000
      targetPort: 3000
