manifests/loadbalancer.yml
apiVersion: v1
kind: Service
metadata:
  name: url-lb
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 88
      protocol: TCP
  selector:
    app: gateway-depl
