manifests/ingress-srv.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/app-root: /app
spec:
  rules:
    - host:
      http:
        paths:
          - path: /app/?(.*)
            pathType: Prefix
            backend:
              service:
                name: frontend-depl
                port:
                  number: 3000
          - path: /_next/?(.*)
            pathType: Prefix
            backend:
              service:
                name: frontend-depl
                port:
                  number: 3000
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: gateway-depl
                port:
                  number: 88
